Enabled the classnames library

--- a/src/components/Item/Item.module.css
+++ b/src/components/Item/Item.module.css
@@ -6,3 +6,9 @@
   padding: 10px;
   font-family: Literata, Arial;
 }
+
+.done {
+  text-decoration-line: line-through;
+  text-decoration-color: #000000;
+  color: #c4c4c4;
+}
