--- a/src/components/Item/Item.module.css
+++ b/src/components/Item/Item.module.css
@@ -1,9 +1,12 @@
 .item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   border: 1px solid #111111;
   border-radius: 5px;
   background: #e9e9e9;
   margin-bottom: 5px;
-  padding: 10px;
+  padding: 0 10px;
   font-family: Literata, Arial;
 }
 
@@ -11,4 +14,9 @@
   text-decoration-line: line-through;
   text-decoration-color: #000000;
   color: #c4c4c4;
+}
+
+.itemText {
+  flex-grow: 1;
+  padding: 0 5px;
 }
