--- a/src/components/App/App.module.css
+++ b/src/components/App/App.module.css
@@ -17,11 +17,19 @@
 }
 
 .wrap {
+  display: flex;
+  justify-content: center;
   margin: 0 auto;
-  padding: 1em;
-  width: 500px;
-  border: 2px solid lightseagreen;
-  border-radius: 30px;
+  padding: .5em;
+  max-width: 480px;
+}
+
+.menu {
+  padding: .5em;
+}
+
+.content {
+  margin-left: .5em;
 }
 
 .title {
