--- a/src/components/Item/Item.module.css
+++ b/src/components/Item/Item.module.css
@@ -7,7 +7,7 @@
   background: #e9e9e9;
   margin-bottom: 5px;
   padding: 0 10px;
-  font-family: Literata, Arial;
+  font-family: Literata, Arial, sans-serif;
 }
 
 .done {
